# nix-based-cpp-starterkit

./: CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix
cmake/: BuildHelpers.cmake  Config.cmake.in
src/: CMakeLists.txt  simple.cc  simple.h  simple_test.cc  what_time.cc
